--- a/projects/ngx-annotate-text/src/lib/components/annotation/annotation.component.css
+++ b/projects/ngx-annotate-text/src/lib/components/annotation/annotation.component.css
@@ -9,6 +9,7 @@ span.annotation-parent {
     white-space: normal;
     color: rgba(0,0,0,.6);
     font-weight: 500;
+    line-height: 1.5;
     word-break: break-word;
     word-wrap: break-word;
 }
@@ -27,7 +28,11 @@ span.annotation-content pre {
     color: inherit;
     font-family: inherit;
     font-size: inherit;
+    display: block;
+    margin-top: 0;
     margin-bottom: 0;
+    overflow: auto;
+    box-sizing: border-box;
 }
 
 span.annotation-label {
