fix bug: white lines visible at certain zoom level
At certain zoom levels, white lines / margins within annotations became
visible (between 'span.annotation-parent' and
'span.annotation-content'). Fix this bug by setting the background color
of the annotation-parent.

--- a/projects/ngx-annotate-text/src/lib/components/annotation/annotation.component.css
+++ b/projects/ngx-annotate-text/src/lib/components/annotation/annotation.component.css
@@ -15,16 +15,20 @@ span.annotation-parent {
 }
 
 span.annotation-content {
+    align-items: center;
+    background-color: #fff;
+    border-top-left-radius: 2px;
+    border-top-right-radius: 2px;
     display: flex;
     flex-wrap: wrap;
-    align-items: center;
-    text-align: center;
     justify-content: center;
     padding: 0 2px;
+    text-align: center;
     white-space: normal;
 }
 
 span.annotation-content pre {
+    background-color: rgba(0, 0, 0, 0);
     color: inherit;
     font-family: inherit;
     font-size: inherit;
@@ -33,6 +37,7 @@ span.annotation-content pre {
     margin-bottom: 0;
     overflow: auto;
     box-sizing: border-box;
+    padding: 0;
 }
 
 span.annotation-label {
