--- a/projects/ngx-annotate-text/src/lib/components/annotation/annotation.component.html
+++ b/projects/ngx-annotate-text/src/lib/components/annotation/annotation.component.html
@@ -1,4 +1,4 @@
-<span class="annotation-parent" [style.border-color]="annotation.color">
+<span class="annotation-parent" [style.border-color]="annotation.color" [style.background-color]="annotation.color">
 
     <span class="annotation-content">
         <pre>{{ annotation.text }}</pre>
