fix errors due to strict null checks

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,10 +16,10 @@
 
   <div class="col-12 mb-5">
 
-    <button type="button" class="btn btn-primary mr-2" (click)="addAnnotation('Date', '#0069d9')">Date</button>
-    <button type="button" class="btn btn-secondary mr-2" (click)="addAnnotation('Time', '#5a6268')">Time</button>
-    <button type="button" class="btn btn-success mr-2" (click)="addAnnotation('Country', '#28a745')">Country</button>
-    <button type="button" class="btn btn-danger mr-2" (click)="addAnnotation('City', '#dc3545')">City</button>
+    <button type="button" class="btn btn-primary me-2" (click)="addAnnotation('Date', '#0d6efd')">Date</button>
+    <button type="button" class="btn btn-secondary me-2" (click)="addAnnotation('Time', '#6c757d')">Time</button>
+    <button type="button" class="btn btn-success me-2" (click)="addAnnotation('Country', '#198754')">Country</button>
+    <button type="button" class="btn btn-danger me-2" (click)="addAnnotation('City', '#dc3545')">City</button>
 
   </div>
 
