add event when user clicks on annotation #10

--- a/projects/ngx-annotate-text/src/lib/components/ngx-annotate-text/ngx-annotate-text.component.html
+++ b/projects/ngx-annotate-text/src/lib/components/ngx-annotate-text/ngx-annotate-text.component.html
@@ -1,9 +1,13 @@
 <span *ngFor="let token of tokens">
-
-  <ngx-annotation *ngIf="isAnnotation(token)" [annotation]="token" [removable]="removable"
-    (removeAnnotation)="onRemoveAnnotation($event)" [class]="(annotationClass || '')">
+  <ngx-annotation
+    *ngIf="isAnnotation(token)"
+    [annotation]="token"
+    [removable]="removable"
+    (removeAnnotation)="onRemoveAnnotation($event)"
+    (clickAnnotation)="clickAnnotation.emit($event)"
+    [class]="annotationClass || ''"
+  >
   </ngx-annotation>
 
   <span *ngIf="!isAnnotation(token)" class="unlabeled">{{ token }}</span>
-
 </span>
