--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,53 +1,72 @@
 <div class="row mt-5">
-
   <div class="col-12">
-
     <h1 class="mb-5 display-4">ngx-annotate-text demo</h1>
 
-    <ngx-annotate-text [(annotations)]="annotations" [removable]="true" [text]="text" annotationClass="my-annotation"
-      #annotateText>
+    <ngx-annotate-text
+      [(annotations)]="annotations"
+      [removable]="true"
+      [text]="text"
+      annotationClass="my-annotation"
+      (clickAnnotation)="onClickAnnotation($event)"
+      (removeAnnotation)="onRemoveAnnotation($event)"
+      #annotateText
+    >
     </ngx-annotate-text>
-
   </div>
-
 </div>
 
 <div class="row mt-3">
-
-  <div class="col-12 mb-5">
-
-    <button type="button" class="btn btn-primary me-2" (click)="addAnnotation('Date', '#0d6efd')">
+  <div class="col-12">
+    <button
+      type="button"
+      class="btn btn-primary me-2"
+      (click)="addAnnotation('Date', '#0d6efd')"
+    >
       Date
     </button>
-    <button type="button" class="btn btn-secondary me-2" (click)="addAnnotation('Time', '#6c757d')">
+    <button
+      type="button"
+      class="btn btn-secondary me-2"
+      (click)="addAnnotation('Time', '#6c757d')"
+    >
       Time
     </button>
-    <button type="button" class="btn btn-success me-2" (click)="addAnnotation('Country', '#198754')">
+    <button
+      type="button"
+      class="btn btn-success me-2"
+      (click)="addAnnotation('Country', '#198754')"
+    >
       Country
     </button>
-    <button type="button" class="btn btn-danger me-2" (click)="addAnnotation('City', '#dc3545')">
+    <button
+      type="button"
+      class="btn btn-danger me-2"
+      (click)="addAnnotation('City', '#dc3545')"
+    >
       City
     </button>
-
   </div>
-
 </div>
 
-<div class="row">
-
-  <div class="col-12">
-
+<div class="row mb-5">
+  <div class="col-12 col-lg-6 mt-3">
     <h2 class="mb-3 display-5">Annotations</h2>
 
-    <ul class="list-group">
-
-      <li class="list-group-item" *ngFor="let a of annotations">
+    <ul class="list-group" style="height: 15rem; overflow-y: auto">
+      <li class="list-group-item" *ngFor="let a of annotations.reverse()">
         start: {{ a.startIndex }}, end: {{ a.endIndex }}, text: "{{ a.text }}",
         label: {{ a.label }}
       </li>
-
     </ul>
-
   </div>
 
+  <div class="col-12 col-lg-6 mt-3">
+    <h2 class="mb-3 display-5">Events</h2>
+
+    <ul class="list-group" style="height: 15rem; overflow-y: auto">
+      <li class="list-group-item" *ngFor="let e of events.reverse()">
+        {{ e }}
+      </li>
+    </ul>
+  </div>
 </div>
