fix: linter warnings and errors

--- a/projects/ngx-annotate-text/src/lib/components/annotation/annotation.component.css
+++ b/projects/ngx-annotate-text/src/lib/components/annotation/annotation.component.css
@@ -1,4 +1,4 @@
-span.annotation-parent {
+button.annotation-parent {
     border: 2px solid;
     border-radius: 4px;
     box-shadow: 2px 4px 20px rgba(0, 0, 0, .1);
