feat: upgrade to Angular v17

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,34 +17,10 @@
 
 <div class="row mt-3">
   <div class="col-12">
-    <button
-      type="button"
-      class="btn btn-primary me-2"
-      (click)="addAnnotation('Date', '#0d6efd')"
-    >
-      Date
-    </button>
-    <button
-      type="button"
-      class="btn btn-secondary me-2"
-      (click)="addAnnotation('Time', '#6c757d')"
-    >
-      Time
-    </button>
-    <button
-      type="button"
-      class="btn btn-success me-2"
-      (click)="addAnnotation('Country', '#198754')"
-    >
-      Country
-    </button>
-    <button
-      type="button"
-      class="btn btn-danger me-2"
-      (click)="addAnnotation('City', '#dc3545')"
-    >
-      City
-    </button>
+    <button type="button" class="btn btn-primary me-2" (click)="addAnnotation('Date', '#0d6efd')">Date</button>
+    <button type="button" class="btn btn-secondary me-2" (click)="addAnnotation('Time', '#6c757d')">Time</button>
+    <button type="button" class="btn btn-success me-2" (click)="addAnnotation('Country', '#198754')">Country</button>
+    <button type="button" class="btn btn-danger me-2" (click)="addAnnotation('City', '#dc3545')">City</button>
   </div>
 </div>
 
@@ -53,10 +29,11 @@
     <h2 class="mb-3 display-5">Annotations</h2>
 
     <ul class="list-group" style="height: 15rem; overflow-y: auto">
-      <li class="list-group-item" *ngFor="let a of annotations.reverse()">
-        start: {{ a.startIndex }}, end: {{ a.endIndex }}, text: "{{ a.text }}",
-        label: {{ a.label }}
-      </li>
+      @for (a of annotations.reverse(); track a) {
+        <li class="list-group-item">
+          start: {{ a.startIndex }}, end: {{ a.endIndex }}, text: "{{ a.text }}", label: {{ a.label }}
+        </li>
+      }
     </ul>
   </div>
 
@@ -64,9 +41,11 @@
     <h2 class="mb-3 display-5">Events</h2>
 
     <ul class="list-group" style="height: 15rem; overflow-y: auto">
-      <li class="list-group-item" *ngFor="let e of events.reverse()">
-        {{ e }}
-      </li>
+      @for (e of events.reverse(); track e) {
+        <li class="list-group-item">
+          {{ e }}
+        </li>
+      }
     </ul>
   </div>
 </div>
