feat: improve type-safety

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -29,7 +29,7 @@
     <h2 class="mb-3 display-5">Annotations</h2>
 
     <ul class="list-group" style="height: 15rem; overflow-y: auto">
-      @for (a of annotations.reverse(); track a) {
+      @for (a of annotations.reverse(); track $index) {
         <li class="list-group-item">
           start: {{ a.startIndex }}, end: {{ a.endIndex }}, text: "{{ a.text }}", label: {{ a.label }}
         </li>
@@ -41,7 +41,7 @@
     <h2 class="mb-3 display-5">Events</h2>
 
     <ul class="list-group" style="height: 15rem; overflow-y: auto">
-      @for (e of events.reverse(); track e) {
+      @for (e of events.reverse(); track $index) {
         <li class="list-group-item">
           {{ e }}
         </li>
