--- a/projects/ngx-annotate-text/src/lib/components/ngx-annotate-text/ngx-annotate-text.component.html
+++ b/projects/ngx-annotate-text/src/lib/components/ngx-annotate-text/ngx-annotate-text.component.html
@@ -1,13 +1,16 @@
-<span *ngFor="let token of tokens">
-  <ngx-annotation
-    *ngIf="isAnnotation(token)"
-    [annotation]="token"
-    [removable]="removable"
-    (removeAnnotation)="onRemoveAnnotation($event)"
-    (clickAnnotation)="clickAnnotation.emit($event)"
-    [class]="annotationClass || ''"
-  >
-  </ngx-annotation>
-
-  <span *ngIf="!isAnnotation(token)" class="unlabeled">{{ token }}</span>
-</span>
+@for (token of tokens; track token) {
+  <span>
+    @if (isAnnotation(token)) {
+      <ngx-annotation
+        [annotation]="toAnnotation(token)"
+        [removable]="removable"
+        (removeAnnotation)="onRemoveAnnotation($event)"
+        (clickAnnotation)="clickAnnotation.emit($event)"
+        [class]="annotationClass || ''"
+      >
+      </ngx-annotation>
+    } @else {
+      <span class="unlabeled">{{ token }}</span>
+    }
+  </span>
+}
